# ledger-xelis

./: .gitignore  Cargo.toml  README.md  analyze_map.py  app.map  generators.py  test_client.py  test_sign.py
.cargo/: config.toml
src/: main.rs  tx_types.rs  utils.rs  xlb.rs
src/app_ui/: address.rs  menu.rs  sign.rs
src/crypto/: address.rs  commitment.rs  mod.rs  public_key.rs  ristretto.rs  scalar.rs  secure.rs  signature.rs
src/crypto/sha/: mod.rs  sha3.rs
src/cx/: mod.rs
src/handlers/: debug_keys.rs  get_public_key.rs  mod.rs
src/handlers/sign_tx/: memo.rs  mod.rs  sign_tx.rs  tx_context.rs  tx_parser.rs
tests/: test_appname_cmd.py  test_name_version.py
tx/: poc_burn.unsigned.attest.json  poc_transfer.unsigned.attest.json  poc_transfer.unsigned.bundle  poc_tx.unsigned.attest.json
