[package]
name = "legder-xelis"
version = "1.7.2"
authors = ["Tritonn"]
edition = "2021"

[dependencies]
ledger_device_sdk = "1.23.0"
ledger_secure_sdk_sys = "1.10.0"
include_gif = "1.2.2"
serde = { version="1.0.192", default-features = false, features = ["derive"] }
serde-json-core = { git = "https://github.com/rust-embedded-community/serde-json-core" }
hex = { version = "0.4.3", default-features = false, features = ["serde", "alloc"] }
numtoa = "0.2.4"

[profile.release]
opt-level = 'z'
lto = true

[features]
default = ["ledger_device_sdk/nano_nbgl"]
debug = ["ledger_device_sdk/debug"]

[package.metadata.ledger]
curve = ["sr25519"]
flags = "0"
path = ["44'/1'"]
name = "XELIS"

[package.metadata.ledger.nanox]
icon = "xelis_15x15.gif"

[package.metadata.ledger.nanosplus]
icon = "xelis_15x15.gif"

[package.metadata.ledger.stax]
icon = "xelis_32x32.gif"

[package.metadata.ledger.flex]
icon = "xelis_40x40.gif"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("stax", "flex", "nanos", "nanox", "nanosplus"))'] }